@@ -4,6 +4,8 @@
 
 *** After Release 2.9 ***
 CHANGE:		Added type gImage          to replace V2.x gdispImage
+FIX:		Fixed GWIN console widget scroll
+FIX:		A warning and adjusted is made if GDISP_IMAGE_BMP_BLIT_BUFFER_SIZE is less than 40 bytes.
 
 
 *** Release 2.9 ***
